@@ -22,9 +22,9 @@ gnect           Y       Y       Y       Y       Y       Y
 gnibbles        Y       Y       Y       Y       Y       Y
 gnobots2        Y       N       Y       Y       Y       Y
 gnome-stones    Y       Y       Y       Y       Y       Y
-gnometris       N       N       Y       Y       Y       Y
-gnomine         N       Y       Y       Y       Y       Y
-gnotravex       N       Y       Y       Y       Y       Y
+gnometris       f       N       Y       Y       Y       Y
+gnomine         Y       Y       Y       Y       Y       Y
+gnotravex       Y       Y       Y       Y       Y       Y
 gnotski         N       e       Y       Y       Y       Y
 gtali           P       N       Y       Y       Y       Y
 iagno           N       N       Y       Y       Y       Y
@@ -41,6 +41,7 @@ d) Yes, but check that the screenshots where done with the correct
    theme.
 e) Doesn't have any preferences, but if we start remembering which
    games have been done we will.
+f) It turns out gnometris doesn't actually have any documentation.
 
 2.4 Issues
 
@@ -49,6 +50,7 @@ General:
 	- Update debian files to be reasonable ?
 	- Update README and HACKING at the last minute to reflect
 	  reality. Also make a big all-of-2.3 NEWS entry for 2.4.0.
+        - Check the size of graphics in the documentation that's been updated.
 
 AisleRiot:
         - Odessa hint function (bug 51694)
@@ -95,6 +97,8 @@ Gnotravex:
         - Tweak the tile positions within the game widget.
         - Replace x with a proper cross, if we can figure out the 
           gettext issues. 
+        - We don't seem to be waiting for the first move before starting the
+          timer anymore.
 
 Gnotski:
 
